--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "firebase": "^9.9.3",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
