--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test0",
+  "name": "archivero-disidente-digital",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
-    "firebase": "^9.9.3",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +24,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.14",
     "vite": "^3.0.7"
   }
 }
