--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "axios": "^1.2.1",
-    "axios": "^1.2.1",
     "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
