--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "firebase": "^9.9.3",
+    "howler": "^2.2.3",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
