--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "archivero-disidente-digital",
+  "homepage": "http://archiverodisidente.cl",
   "private": true,
   "version": "0.0.0",
   "type": "module",
