--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
+    "compass": "^0.1.1",
     "firebase": "^9.9.3",
     "howler": "^2.2.3",
     "postcss": "^8.4.20",
