--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "compass": "^0.1.1",
     "firebase": "^9.9.3",
     "howler": "^2.2.3",
+    "node-sass": "^8.0.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "postcss": "^8.4.14",
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "vite": "^3.0.7"
   }
